--- a/clase-1/package.json
+++ b/clase-1/package.json
@@ -1,34 +1,11 @@
 {
-  "name": "curso-node",
+  "name": "test-node",
   "version": "1.0.0",
-  "description": "El mejor curso de Node por 0€",
-  "main": "index.js",
+  "description": "aprendiendo node.js",
+  "main": "1.os-info.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/midudev/curso-node-js.git"
-  },
-  "keywords": [
-    "curso",
-    "node",
-    "nodejs",
-    "midudev"
-  ],
-  "author": "Miguel Ángel Durán García - midudev",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/midudev/curso-node-js/issues"
-  },
-  "homepage": "https://github.com/midudev/curso-node-js#readme",
-  "dependencies": {
-    "picocolors": "1.0.0"
-  },
-  "devDependencies": {
-    "standard": "17.1.0"
-  },
-  "eslintConfig": {
-    "extends": "standard"
-  }
+  "author": "midudev",
+  "license": "ISC"
 }
